--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ header {
 .img {
     width: 36px;
     height: 36px;
-    background-image: url("/img/uno.png");
+    background-image: url("img/uno.png");
     background-size: cover;
     border-radius: 100%;
 }
@@ -213,7 +213,7 @@ div.hii {
     border: solid orange 2px;
 }
 .reactlogo{
-    background-image: url("/img/react.png");
+    background-image: url("img/react.png");
     background-size: cover;
     height: 29px;
     width: 28px;
@@ -428,7 +428,7 @@ footer{
     
     <header>
         <div class="img">
-            <!-- <img src="/img/uno.png" alt=""> -->
+            <!-- <img src="img/uno.png" alt=""> -->
         </div>
         <div class="name">
             <h3>Unendra Pal</h3>
@@ -475,91 +475,91 @@ footer{
             <div class="data">
                 <div class="one">
                     <div class="ds">
-                        <div class="dslogo"><img src="/img/ds.png" alt="mllogo" style=" background-size: cover;
+                        <div class="dslogo"><img src="img/ds.png"mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"> </div>
                         <div>Data Science </div>
                     </div>
                     <div class="ml">
-                        <div class="mllogo"><img src="/img/ml.png" alt="mllogo" style=" background-size: cover;
+                        <div class="mllogo"><img src="img/ml.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"> </div>
                         <div>Machine Learning </div>
                     </div>
                     <div class="html">
-                        <div class="htmllogo"><img src="/img/html.png" alt="mllogo" style=" background-size: cover;
+                        <div class="htmllogo"><img src="img/html.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"> </div>
                         <div>HTML </div>
                     </div>
                     <div class="css">
-                        <div class="csslogo"> <img src="/img/css.png" alt="mllogo" style=" background-size: cover;
+                        <div class="csslogo"> <img src="img/css.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"></div>
                         <div>CSS </div>
                     </div>
                     <div class="react">
-                        <div class="reactlogo"> <img src="/img/react.png" alt="mllogo" style=" background-size: cover;
+                        <div class="reactlogo"> <img src="img/react.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"></div>
                         <div>React </div>
                     </div>
                     <div class="ds">
-                        <div class="dslogo"><img src="/img/ds.png" alt="mllogo" style=" background-size: cover;
+                        <div class="dslogo"><img src="img/ds.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"> </div>
                         <div>Data Science </div>
                     </div>
                     <div class="ml">
-                        <div class="mllogo"> <img src="/img/ml.png" alt="mllogo" style=" background-size: cover;
+                        <div class="mllogo"> <img src="img/ml.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"></div>
                         <div>Machine Learning </div>
                     </div>
                     <div class="html">
-                        <div class="htmllogo"><img src="/img/html.png" alt="mllogo" style=" background-size: cover;
+                        <div class="htmllogo"><img src="img/html.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"> </div>
                         <div>HTML </div>
                     </div>
                     <div class="css">
-                        <div class="csslogo"><img src="/img/css.png" alt="mllogo" style=" background-size: cover;
+                        <div class="csslogo"><img src="img/css.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"> </div>
                         <div>CSS </div>
                     </div>
                     <div class="react">
-                        <div class="reactlogo"> <img src="/img/react.png" alt="mllogo" style=" background-size: cover;
+                        <div class="reactlogo"> <img src="img/react.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"></div>
                         <div>React </div>
                     </div>
                     <div class="ds">
-                        <div class="dslogo"><img src="/img/ds.png" alt="mllogo" style=" background-size: cover;
+                        <div class="dslogo"><img src="img/ds.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"> </div>
                         <div>Data Science </div>
                     </div>
                     <div class="ml">
-                        <div class="mllogo"> <img src="/img/ml.png" alt="mllogo" style=" background-size: cover;
+                        <div class="mllogo"> <img src="img/ml.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"></div>
                         <div>Machine Learning </div>
                     </div>
                     <div class="html">
-                        <div class="htmllogo"><img src="/img/html.png" alt="mllogo" style=" background-size: cover;
+                        <div class="htmllogo"><img src="img/html.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"> </div>
                         <div>HTML </div>
                     </div>
                     <div class="css">
-                        <div class="csslogo"> <img src="/img/css.png" alt="mllogo" style=" background-size: cover;
+                        <div class="csslogo"> <img src="img/css.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"></div>
                         <div>CSS </div>
                     </div>
                     <div class="react">
-                        <div class="reactlogo"><img src="/img/react.png" alt="mllogo" style=" background-size: cover;
+                        <div class="reactlogo"><img src="img/react.png" alt="mllogo" style=" background-size: cover;
                             height: 29px;
                             width: 28px;"> </div>
                         <div>React </div>
@@ -620,7 +620,7 @@ footer{
             <div class="projectname">
                 <div class="about">
                     <div class="upp">
-                        <img src="/img/project.png" alt="" style="height: 100%; width: 100%;">
+                        <img src="img/project.png" alt="" style="height: 100%; width: 100%;">
                     </div>
                     <div class="down2">
                         <h4>Project Name</h4>
@@ -632,7 +632,7 @@ footer{
                 </div>
                 <div class="about">
                     <div class="upp">
-                        <img src="/img/project.png" alt="" style="height: 100%; width: 100%;">
+                        <img src="img/project.png" alt="" style="height: 100%; width: 100%;">
                     </div>
                     <div class="down2">
                         <h4>Project Name</h4>
@@ -644,7 +644,7 @@ footer{
                 </div>
                 <div class="about">
                     <div class="upp">
-                        <img src="/img/project.png" alt="" style="height: 100%; width: 100%;">
+                        <img src="img/project.png" alt="" style="height: 100%; width: 100%;">
                     </div>
                     <div class="down2">
                         <h4>Project Name</h4>
